src/objects/QB_Vendor_Credits__c.object
<CustomObject>
    <description>Vendor Credit detail from Quickbooks</description>
    <fields>
        <fullName>FF_Dimension_1__c</fullName>
        <label>FF Dimension 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_Dimension_2__c</fullName>
        <label>FF Dimension 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_GLA_Name__c</fullName>
        <label>FF GLA Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR2_Vendor__c</fullName>
        <formula>If (Left(Vendor__c,6) = &apos;CSTMR*&apos;,
Right(Vendor__c,LEN(Vendor__c)-9),
If (Left(Vendor__c,5) = &apos;CSTMR&apos;,
Right(Vendor__c,LEN(Vendor__c)-8),
If (Left(Vendor__c,3) = &apos;EMP&apos;,
Right(Vendor__c,LEN(Vendor__c)-4),
Vendor__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IR2 Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RS_Project_ID__c</fullName>
        <label>RS Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefNumber__c</fullName>
        <label>RefNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrnDate__c</fullName>
        <label>TrnDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TxnExpLine_Amount__c</fullName>
        <label>TxnExpLine Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TxnExpLine_Memo__c</fullName>
        <label>TxnExpLine Memo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Txnid__c</fullName>
        <label>Txnid</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QB Vendor Credits</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RefNumber__c</columns>
        <columns>Vendor__c</columns>
        <columns>IR2_Vendor__c</columns>
        <columns>FF_GLA_Name__c</columns>
        <columns>FF_Dimension_1__c</columns>
        <columns>TxnExpLine_Amount__c</columns>
        <columns>TxnExpLine_Memo__c</columns>
        <columns>Memo__c</columns>
        <columns>Txnid__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>IR2_Vendor__c</columns>
        <columns>FF_Dimension_1__c</columns>
        <columns>FF_GLA_Name__c</columns>
        <columns>Memo__c</columns>
        <columns>RefNumber__c</columns>
        <columns>TrnDate__c</columns>
        <columns>TxnExpLine_Amount__c</columns>
        <columns>Txnid__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unprocessed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VC-{000000}</displayFormat>
        <label>QB Vendor Credits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Vendor Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>